--- a/Dependencies.toml
+++ b/Dependencies.toml
@@ -213,6 +213,9 @@ dependencies = [
 	{org = "ballerina", name = "lang.value"},
 	{org = "ballerina", name = "observe"}
 ]
+modules = [
+	{org = "ballerina", packageName = "log", moduleName = "log"}
+]
 
 [[package]]
 org = "ballerina"
@@ -297,7 +300,8 @@ org = "shankar"
 name = "weather_mood"
 version = "0.1.0"
 dependencies = [
-	{org = "ballerina", name = "http"}
+	{org = "ballerina", name = "http"},
+	{org = "ballerina", name = "log"}
 ]
 modules = [
 	{org = "shankar", packageName = "weather_mood", moduleName = "weather_mood"}
